tests/snapshots/run_wpt_conformance__onnx_triangular_int32_2D_tensor_options_upper_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular int32 2D tensor options.upper=false",
    "onnx",
    "PASS",
)
