tests/snapshots/run_wpt_conformance__onnx_where_float16_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "where.https.any.js",
    "where float16 2D tensors",
    "onnx",
    "PASS",
)
